Dashboard z-index fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -172,6 +172,7 @@
     padding: 1.5rem 0.2rem;
     cursor: pointer;
     transition: left 0.4s ease-in-out;
+    z-index: 10;
   }
   .displaycontainer {
     width: 100%;
